2A/05_Projet_GL/src/test/deca/context/valid/complet/09_declMethode_avce_tout_types.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

class A {

}

class B {

    void meth1() {

    }

    int meth2() {

    }

    float meth3() {

    }

    A getA() {

    }

    boolean getBool() {

    }
}