2A/05_Projet_GL/src/test/deca/context/invalid/complet/18_redef_meth_type_diff.deca
// Description :
//    redefinition d'une methode avec un type de retour diff 
// Resultats :
//    ligne 15 : le boolean n'est pas un sous type du int  
// Historique :
//  cree le 16/01/2024

class A {
    int get() {

    }
}

class B extends A {
    boolean get() {
        
    }
}